fix for hiding the horixontal scrollbar

--- a/css/hexalab.css
+++ b/css/hexalab.css
@@ -266,10 +266,9 @@ canvas {
 	overflow: auto;
 	height: 100%;
 	width: 75%;
-	margin-left: 25%;
+	margin-left: 25.2%;
 	align-items: stretch;
 }
-
 
 .ui-accordion .ui-accordion-content{
 	padding:1em 1em;
